--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@
         <p class="font-poppins cor-0">Arcoverde - Segunda a Sexta <br> 9h às 12h<br> 14h às 18h</p>
       </div>
     </div>
+    <div class="footer-creditos container">
+      <p class="font-montserrat cor-0">© 2024 Carlos Araújo Advocacia - Direitos Reservados <br> Desenvolvido por Leonardo Campos.</p>
+    </div>
   </footer>
   <script type="module" src="./js/script.js"></script>
 </body>
