--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <section class="introducao-bg">
     <div class="introducao-conteudo container">
-      <span class="font-poppins span-oab fadeInDown" data-anime="700">OAB/PE -000.00 - PE</span>
+      <span class="font-poppins span-oab fadeInDown" data-anime="700">OAB-PE 32.099</span>
       <p class="font-poppins fadeInDown" data-anime="400">Mais de 10 anos defendendo seus direitos com respeito e transparência.</p>
       <a href="https://wa.me/5587981740303" target="_blank"><button class="btn1 font-poppins fadeInLeft" data-anime="900">Agendar <span>(Escritório Buíque)</span></button></a>
       <a href="https://wa.me/5587999066958" target="_blank"><button class="btn2 font-poppins fadeInLeft" data-anime="900">Agendar <span>(Escritório Arcoverde)</span></button></a>
@@ -154,7 +154,7 @@
           <div><img src="images/advg-1.jpeg"  data-anime="scroll-up" alt="advogado"></div>
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dr. Carlos Araújo</h1>
-            <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
+            <span class="font-poppins cor-1">OAB-PE 32.099 - PE</span>
             <p class="font-poppins">Especialista em direito criminal</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
@@ -174,7 +174,7 @@
         <li>
           <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
             <h1 class="font-poppins cor-1">Dr. Matheus Barros</h1>
-            <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
+            <span class="font-poppins cor-1">OAB-PE 55.015 - PE</span>
             <p class="font-poppins">Especialista em direito previdenciário</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
@@ -196,7 +196,7 @@
           <div><img src="images/advg-3.jpeg" data-anime="scroll-up" alt="advogado"></div>
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dra. Josivânia Siqueira</h1>
-            <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
+            <span class="font-poppins cor-1">OAB-PE 57.876 - PE</span>
             <p class="font-poppins">Especialista em direito trabalhista</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
