--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div><img src="images/advg-1.jpeg"  data-anime="scroll-up" alt="advogado"></div>
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dr. Carlos Araújo</h1>
-            <span class="font-poppins cor-1">OAB-PE 32.099</span>
+            <span class="font-poppins cor-1">OAB/PE 32.099</span>
             <p class="font-poppins">Especialista em direito criminal</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
@@ -174,7 +174,7 @@
         <li>
           <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
             <h1 class="font-poppins cor-1">Dr. Matheus Barros</h1>
-            <span class="font-poppins cor-1">OAB-PE 55.015</span>
+            <span class="font-poppins cor-1">OAB/PE 55.015</span>
             <p class="font-poppins">Especialista em direito previdenciário</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
@@ -196,7 +196,7 @@
           <div><img src="images/advg-3.jpeg" data-anime="scroll-up" alt="advogado"></div>
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dra. Josivânia Siqueira</h1>
-            <span class="font-poppins cor-1">OAB-PE 57.876</span>
+            <span class="font-poppins cor-1">OAB/PE 57.876</span>
             <p class="font-poppins">Especialista em direito trabalhista</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
