--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="icons/logo-4.ico.jpg" type="image/x-icon">
   <link rel="stylesheet" href="estilos/style.css">
   <script>document.documentElement.className += ' js';</script>
@@ -44,9 +46,12 @@
   <section class="introducao-bg">
     <div class="introducao-conteudo container">
       <span class="font-poppins span-oab fadeInDown" data-anime="700">OAB-PE 32.099</span>
-      <p class="font-poppins fadeInDown" data-anime="400">Mais de 10 anos defendendo seus direitos com respeito e transparência.</p>
-      <a href="https://wa.me/5587981740303" target="_blank"><button class="btn1 font-poppins fadeInLeft" data-anime="900">Agendar <span>(Escritório Buíque)</span></button></a>
-      <a href="https://wa.me/5587999066958" target="_blank"><button class="btn2 font-poppins fadeInLeft" data-anime="900">Agendar <span>(Escritório Arcoverde)</span></button></a>
+      <p class="font-poppins fadeInDown" data-anime="400">Mais de 10 anos defendendo seus direitos com respeito e
+        transparência.</p>
+      <a href="https://wa.me/5587981740303" target="_blank"><button class="btn1 font-poppins fadeInLeft"
+          data-anime="900">Agendar <span>(Escritório Buíque)</span></button></a>
+      <a href="https://wa.me/5587999066958" target="_blank"><button class="btn2 font-poppins fadeInLeft"
+          data-anime="900">Agendar <span>(Escritório Arcoverde)</span></button></a>
       <div class="orcamento">
         <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
       </div>
@@ -140,8 +145,10 @@
           objetivo é garantir seu conforto e segurança, tendo a certeza de que seu caso está nas mãos de profissionais
           competentes. Estamos prontos para oferecer a representação jurídica necessária e buscar as melhores soluções
           para suas demandas legais.</p>
-          <a href="https://wa.me/5587981740303" target="_blank"><button class="btn1 font-poppins">Agendar <span>(Escritório Buíque)</span></button></a>
-          <a href="https://wa.me/5587999066958" target="_blank"><button class="btn2 font-poppins">Agendar <span>(Escritório Arcoverde)</span></button></a>
+        <a href="https://wa.me/5587981740303" target="_blank"><button class="btn1 font-poppins">Agendar
+            <span>(Escritório Buíque)</span></button></a>
+        <a href="https://wa.me/5587999066958" target="_blank"><button class="btn2 font-poppins">Agendar
+            <span>(Escritório Arcoverde)</span></button></a>
       </div>
     </div>
   </section>
@@ -151,22 +158,26 @@
       <h1 class="font-poppins cor-0">Equipe</h1>
       <ul class="equipe-advg">
         <li>
-          <div><img src="images/advg-1.jpeg"  data-anime="scroll-up" alt="advogado"></div>
+          <div><img src="images/advg-1.jpeg" data-anime="scroll-up" alt="advogado"></div>
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dr. Carlos Araújo</h1>
             <span class="font-poppins cor-1">OAB/PE 32.099</span>
             <p class="font-poppins">Especialista em direito criminal</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
-                <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-                <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-                <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+              <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img
+                  src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
+                  alt="email"></a>
             </div>
             <div class="contato-pessoal-arcoverde">
               <p class="font-montserrat">Arcoverde</p>
               <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-              <a href="https://www.instagram.com/carlosaraujoadv.arcoverde/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+              <a href="https://www.instagram.com/carlosaraujoadv.arcoverde/" target="_blank"><img
+                  src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
+                  alt="email"></a>
             </div>
           </div>
         </li>
@@ -179,14 +190,18 @@
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
               <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-              <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+              <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img
+                  src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
+                  alt="email"></a>
             </div>
             <div class="contato-pessoal-arcoverde">
               <p class="font-montserrat">Arcoverde</p>
               <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-              <a href="https://www.instagram.com/carlosaraujoadv.arcoverde/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+              <a href="https://www.instagram.com/carlosaraujoadv.arcoverde/" target="_blank"><img
+                  src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
+                  alt="email"></a>
             </div>
           </div>
           <div class="grid-colum-2"><img src="images/advg-2.jpeg" data-anime="scroll-up" alt="advogado"></div>
@@ -201,14 +216,18 @@
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
               <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-              <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+              <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img
+                  src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
+                  alt="email"></a>
             </div>
             <div class="contato-pessoal-arcoverde">
               <p class="font-montserrat">Arcoverde</p>
               <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-              <a href="https://www.instagram.com/carlosaraujoadv.arcoverde/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+              <a href="https://www.instagram.com/carlosaraujoadv.arcoverde/" target="_blank"><img
+                  src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
+                  alt="email"></a>
             </div>
           </div>
         </li>
@@ -220,18 +239,35 @@
     <div class="faq-conteudo container" id="faq">
       <h1 class="font-poppins cor-1">Perguntas Frequentes</h1>
       <dl class="faq-lista">
-        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Como são determinadas as circunstâncias <br> agravantes e atenuantes em um julgamento criminal?
-        </dt> 
-        <dd class="dd-resposta font-poppins cor-1">Refere-se ao processo pelo qual o juiz ou júri considera fatores adicionais que podem aumentar (agravantes) ou reduzir (atenuantes) a gravidade de um crime durante o julgamento.</dd>
+        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Como são determinadas as circunstâncias <br>
+          agravantes e atenuantes em um julgamento criminal?
+        </dt>
+        <dd class="dd-resposta font-poppins cor-1">Refere-se ao processo pelo qual o juiz ou júri considera fatores
+          adicionais que podem aumentar (agravantes) ou reduzir (atenuantes) a gravidade de um crime durante o
+          julgamento.</dd>
 
-        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Qual é a diferença entre aposentadoria <br> por tempo de contribuição e aposentadoria por invalidez?</dt>
-        <dd class="dd-resposta font-poppins"> a aposentadoria por tempo de contribuição está relacionada ao tempo de serviço do trabalhador, enquanto a aposentadoria por invalidez é voltada para aqueles que não podem mais trabalhar devido a problemas de saúde. A primeira depende do cumprimento de requisitos de contribuição, enquanto a segunda se baseia em comprovação de incapacidade.</dd>
+        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Qual é a diferença entre aposentadoria <br>
+          por tempo de contribuição e aposentadoria por invalidez?</dt>
+        <dd class="dd-resposta font-poppins"> a aposentadoria por tempo de contribuição está relacionada ao tempo de
+          serviço do trabalhador, enquanto a aposentadoria por invalidez é voltada para aqueles que não podem mais
+          trabalhar devido a problemas de saúde. A primeira depende do cumprimento de requisitos de contribuição,
+          enquanto a segunda se baseia em comprovação de incapacidade.</dd>
 
-        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Quais são os direitos garantidos aos trabalhadores <br> em caso de demissão sem justa causa?</dt>
-        <dd class="dd-resposta font-poppins">Os direitos garantidos aos trabalhadores em caso de demissão sem justa causa visam proporcionar uma rede de segurança financeira e facilitar a transição para um novo emprego. É importante que tanto empregadores quanto empregados estejam cientes desses direitos para garantir o cumprimento da legislação trabalhista vigente. Se tiver mais dúvidas ou precisar de informações adicionais, sinta-se à vontade para perguntar!.</dd>
+        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Quais são os direitos garantidos aos
+          trabalhadores <br> em caso de demissão sem justa causa?</dt>
+        <dd class="dd-resposta font-poppins">Os direitos garantidos aos trabalhadores em caso de demissão sem justa
+          causa visam proporcionar uma rede de segurança financeira e facilitar a transição para um novo emprego. É
+          importante que tanto empregadores quanto empregados estejam cientes desses direitos para garantir o
+          cumprimento da legislação trabalhista vigente. Se tiver mais dúvidas ou precisar de informações adicionais,
+          sinta-se à vontade para perguntar!.</dd>
 
-        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Como é feita a partilha de bens <br> em um divórcio consensual e litigioso?</dt>
-        <dd class="dd-resposta font-poppins">A partilha de bens em um divórcio pode variar significativamente dependendo do tipo de divórcio (consensual ou litigioso) e do regime de bens adotado no casamento. Enquanto o divórcio consensual oferece uma abordagem mais amigável e flexível, o divórcio litigioso pode ser necessário quando há disputas significativas entre as partes. Em ambos os casos, é essencial contar com orientação legal adequada para assegurar que os direitos de todos os envolvidos sejam respeitados.</dd>
+        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Como é feita a partilha de bens <br> em um
+          divórcio consensual e litigioso?</dt>
+        <dd class="dd-resposta font-poppins">A partilha de bens em um divórcio pode variar significativamente dependendo
+          do tipo de divórcio (consensual ou litigioso) e do regime de bens adotado no casamento. Enquanto o divórcio
+          consensual oferece uma abordagem mais amigável e flexível, o divórcio litigioso pode ser necessário quando há
+          disputas significativas entre as partes. Em ambos os casos, é essencial contar com orientação legal adequada
+          para assegurar que os direitos de todos os envolvidos sejam respeitados.</dd>
       </dl>
     </div>
   </section>
@@ -298,19 +334,23 @@
         <ul>
           <p class="font-poppins cor-0"><a href="tel:+5587981740303">(87)98174-0303</a></p>
           <p class="font-poppins cor-0"><a href="tel:+5587999066958">(87)99906-6958</a></p>
-          <a  class="font-poppins cor-0" href="mailto:contato@advaraujo.adv.br" target="_blank">contato@advaraujo.adv.br</a>
+          <a class="font-poppins cor-0" href="mailto:contato@advaraujo.adv.br"
+            target="_blank">contato@advaraujo.adv.br</a>
         </ul>
       </div>
       <div class="footer-atendimento">
         <h1 class="font-poppins cor-0">Atendimento</h1>
-        <p class="font-poppins cor-0">Horário de Funcionamento</p>
-        <p class="font-poppins cor-0">Buíque - Segunda a Sexta <br> 8h às 12h <br> 13:30 às 17h</p>
+        <p class="font-poppins cor-0 funcionamento">Horário de Funcionamento</p>
+        <p class="font-poppins cor-0 cidade">Buíque - Segunda a Sexta</p>
+        <p class="font-poppins cor-0"> 8h às 12h <br> 13:30 às 17h</p>
 
-        <p class="font-poppins cor-0">Arcoverde - Segunda a Sexta <br> 9h às 12h<br> 14h às 18h</p>
+        <p class="font-poppins cor-0 cidade">Arcoverde - Segunda a Sexta</p>
+          <p class="font-poppins cor-0">9h às 12h<br> 14h às 18h</p>
       </div>
     </div>
     <div class="footer-creditos container">
-      <p class="font-montserrat cor-0">© 2024 Carlos Araújo Advocacia - Direitos Reservados <br> Desenvolvido por Leonardo Campos.</p>
+      <p class="font-montserrat cor-0">© 2024 Carlos Araújo Advocacia - Direitos Reservados <br> Desenvolvido por
+        Leonardo Campos.</p>
     </div>
   </footer>
   <script type="module" src="./js/script.js"></script>
