--- a/index.html
+++ b/index.html
@@ -286,16 +286,16 @@
           <h3 class="font-poppins">Escritório Buíque</h3>
           <ul>
             <li>
-              <p class="font-poppins icon-endereco">Av. Jonas Camelo de Almeida, 146</p>
+              <p class="font-roboto icon-endereco">Av. Jonas Camelo de Almeida, 146</p>
             </li>
             <li>
-              <p class="font-poppins buique">Buíque-PE</p>
+              <p class="font-roboto buique">Buíque-PE</p>
             </li>
             <li>
-              <p class="font-poppins icon-cidade">CEP 56520-000</p>
+              <p class="font-roboto icon-cidade">CEP 56520-000</p>
             </li>
             <li>
-              <p class="font-poppins icon-tel"><a href="tel:+5587981740303">(87)98174-0303</a></p>
+              <p class="font-roboto icon-tel"><a href="tel:+5587981740303">(87)98174-0303</a></p>
             </li>
           </ul>
         </div>
@@ -305,19 +305,19 @@
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
           <div>
-            <h3 class="font-poppins">Escritório Arcoverde</h3>
+            <h3 class="font-roboto">Escritório Arcoverde</h3>
             <ul>
               <li>
-                <p class="font-poppins icon-endereco">R. Francisco Leonardo Filho, 401</p>
+                <p class="font-roboto icon-endereco">R. Francisco Leonardo Filho, 401</p>
               </li>
               <li>
-                <p class="font-poppins arcoverde">Arcoverde-PE</p>
+                <p class="font-roboto arcoverde">Arcoverde-PE</p>
               </li>
               <li>
-                <p class="font-poppins icon-cidade">CEP 56509-240</p>
+                <p class="font-roboto icon-cidade">CEP 56509-240</p>
               </li>
               <li>
-                <p class="font-poppins icon-tel"><a href="tel:+5587999066958">(87)99906-6958</a></p>
+                <p class="font-roboto icon-tel"><a href="tel:+5587999066958">(87)99906-6958</a></p>
               </li>
             </ul>
           </div>
