--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
     </ul>
   </section>
 
-  <section class="escritorio-bg container" id="escritorio">
-    <div class="escritorio-conteudo">
+  <section class="escritorio-bg" id="escritorio">
+    <div class="escritorio-conteudo container">
       <div><img src="images/escritorio-1.jpeg" alt="escritorio" data-anime="scroll-left"></div>
       <div data-anime="scroll-right">
         <p class="font-montserrat cor-3">Escritório</p>
