--- a/index.html
+++ b/index.html
@@ -231,6 +231,31 @@
             </div>
           </div>
         </li>
+
+        <li>
+          <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
+            <h1 class="font-poppins cor-1">Dr. Jackson Albuquerque</h1>
+            <span class="font-poppins cor-1">OAB/PE 00.000</span>
+            <p class="font-poppins">Especialista em direito civil</p>
+            <div class="contato-pessoal-buique">
+              <p class="font-montserrat">Buíque</p>
+              <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img
+                  src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
+                  alt="email"></a>
+            </div>
+            <div class="contato-pessoal-arcoverde">
+              <p class="font-montserrat">Arcoverde</p>
+              <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="https://www.instagram.com/carlosaraujoadv.arcoverde/" target="_blank"><img
+                  src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
+                  alt="email"></a>
+            </div>
+          </div>
+          <div class="grid-colum-2"><img src="images/advg-4.JPG" data-anime="scroll-up" alt="advogado"></div>
+        </li>
       </ul>
     </div>
   </section>
@@ -261,8 +286,8 @@
           cumprimento da legislação trabalhista vigente. Se tiver mais dúvidas ou precisar de informações adicionais,
           sinta-se à vontade para perguntar!.</dd>
 
-        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Como é feita a partilha de bens <br> em um
-          divórcio consensual e litigioso?</dt>
+        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Como é feita a partilha de bens em um
+          divórcio <br> consensual e litigioso?</dt>
         <dd class="dd-resposta font-poppins">A partilha de bens em um divórcio pode variar significativamente dependendo
           do tipo de divórcio (consensual ou litigioso) e do regime de bens adotado no casamento. Enquanto o divórcio
           consensual oferece uma abordagem mais amigável e flexível, o divórcio litigioso pode ser necessário quando há
