--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
   <section class="introducao-bg">
     <div class="introducao-conteudo container">
       <span class="font-poppins span-oab fadeInDown" data-anime="700">OAB/PE 32.099</span>
-      <p class="font-poppins fadeInDown" data-anime="400">Mais de 10 anos defendendo seus direitos com respeito e
-        transparência.</p>
+      <p class="font-poppins fadeInDown" data-anime="400">Mais de 10 anos defendendo seus direitos com respeito e transparência.</p>
       <a href="https://wa.me/5587981740303" target="_blank"><button class="btn1 font-poppins fadeInLeft"
           data-anime="900">Agendar <span>(Escritório Buíque)</span></button></a>
       <a href="https://wa.me/5587999066958" target="_blank"><button class="btn2 font-poppins fadeInLeft"
