--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
   <section class="introducao-bg">
     <div class="introducao-conteudo container">
       <span class="font-poppins span-oab fadeInDown" data-anime="700">OAB/PE 32.099</span>
-      <p class="font-poppins fadeInDown" data-anime="400">Mais de 10 anos defendendo seus direitos com respeito e transparência.</p>
+      <p class="font-poppins fadeInDown" data-anime="400">Escritório com mais de 10 anos de existência</p>
+      <p class="font-montserrat fadeInDown introducao-texto" data-anime="400">atuante em diversas áreas do direito, tendo como principal escopo uma atuação eficiente, responsável, ética e transparente.</p>
       <a href="https://wa.me/5587981740303" target="_blank"><button class="btn1 font-poppins fadeInLeft"
           data-anime="900">Agendar <span>(Escritório Buíque)</span></button></a>
       <a href="https://wa.me/5587999066958" target="_blank"><button class="btn2 font-poppins fadeInLeft"
@@ -203,7 +204,7 @@
                   alt="email"></a>
             </div>
           </div>
-          <div class="grid-colum-2"><img src="images/advg-2.jpeg" data-anime="scroll-up" alt="advogado"></div>
+          <div class="grid-colum-2"><img src="images/advg2-teste.jpeg" data-anime="scroll-up" alt="advogado"></div>
         </li>
 
         <li>
@@ -253,7 +254,7 @@
                   alt="email"></a>
             </div>
           </div>
-          <div class="grid-colum-2"><img src="images/advg-4.JPG" data-anime="scroll-up" alt="advogado"></div>
+          <div class="grid-colum-2"><img src="images/advg4-teste.jpeg" data-anime="scroll-up" alt="advogado"></div>
         </li>
       </ul>
     </div>
