--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
           <div><img src="images/advg-1.jpeg" data-anime="scroll-up" alt="advogado"></div>
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dr. Carlos Araújo</h1>
-            <span class="font-poppins cor-1">OAB/PE 32.099</span>
-            <p class="font-poppins">Especialista em direito Penal, Processo Penal e Criminologia</p>
+            <span class="span-oab2 font-poppins cor-1">OAB/PE 32.099</span>
+            <p class="font-poppins">Especialista em direito Penal, Processo Penal e Criminologia.</p>
             <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br> Direito Criminal<br>Direito Eleitoral<br>Direito Administrativo Sancionador</span></p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
@@ -186,8 +186,8 @@
         <li>
           <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
             <h1 class="font-poppins cor-1">Dr. Matheus Barros</h1>
-            <span class="font-poppins cor-1">OAB/PE 55.015</span>
-            <p class="font-poppins">Especialista em direito previdenciário</p>
+            <span class="span-oab2 font-poppins cor-1">OAB/PE 55.015</span>
+            <p class="font-poppins">Especialista em direito previdenciário.</p>
             <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Previdenciário<br>Direito Civil<br>Direito Administrativo</span></p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
@@ -213,8 +213,8 @@
           <div><img src="images/advg-3.jpeg" data-anime="scroll-up" alt="advogado"></div>
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dra. Josivânia Siqueira</h1>
-            <span class="font-poppins cor-1">OAB/PE 57.876</span>
-            <p class="font-poppins">Especialista em direito trabalhista</p>
+            <span class="span-oab2 font-poppins cor-1">OAB/PE 57.876</span>
+            <p class="font-poppins">Especialista em direito trabalhista.</p>
             <div class="contato-pessoal-arcoverde">
               <p class="font-montserrat">Arcoverde</p>
               <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
@@ -229,7 +229,7 @@
         <li>
           <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
             <h1 class="font-poppins cor-1">Dr. Jackson Albuquerque</h1>
-            <span class="font-poppins cor-1">OAB/PE 65.937</span>
+            <span class="span-oab2 font-poppins cor-1">OAB/PE 65.937</span>
             <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Civil <br>Legislação de Trânsito <br>Direito Imobiliário</span></p>  
             <div class="contato-pessoal-arcoverde">
               <p class="font-montserrat">Arcoverde</p>
@@ -247,7 +247,7 @@
           <div><img src="images/advg5.jpeg" data-anime="scroll-up" alt="advogado"></div>
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dra. Sheyla Almeida</h1>
-            <span class="font-poppins cor-1">OAB/PE 65.109</span>
+            <span class="span-oab2 font-poppins cor-1">OAB/PE 65.109</span>
             <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Civil <br> Direito Trabalhista</span></p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
