--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     <div class="introducao-conteudo container">
       <span class="font-poppins span-oab fadeInDown" data-anime="700">OAB/PE 32.099</span>
       <p class="font-poppins fadeInDown" data-anime="400">Escritório com mais de 10 anos de existência</p>
-      <p class="font-montserrat fadeInDown introducao-texto" data-anime="400">atuante em diversas áreas do direito, tendo como principal escopo uma atuação eficiente, responsável, ética e transparente.</p>
+      <p class="font-montserrat fadeInDown introducao-texto" data-anime="400">atuante em diversas áreas do direito,
+        tendo como principal escopo uma atuação eficiente, responsável, ética e transparente.</p>
       <a href="https://wa.me/5587981740303" target="_blank"><button class="btn1 font-poppins fadeInLeft"
           data-anime="900">Agendar <span>(Escritório Buíque)</span></button></a>
       <a href="https://wa.me/5587999066958" target="_blank"><button class="btn2 font-poppins fadeInLeft"
@@ -163,7 +164,8 @@
             <h1 class="font-poppins cor-1">Dr. Carlos Araújo</h1>
             <span class="span-oab2 font-poppins cor-1">OAB/PE 32.099</span>
             <p class="font-poppins">Especialista em direito Penal, Processo Penal e Criminologia.</p>
-            <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br> Direito Criminal<br>Direito Eleitoral<br>Direito Administrativo Sancionador</span></p>
+            <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br> Direito Criminal<br>Direito
+                Eleitoral<br>Direito Administrativo Sancionador</span></p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
               <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
@@ -188,7 +190,8 @@
             <h1 class="font-poppins cor-1">Dr. Matheus Barros</h1>
             <span class="span-oab2 font-poppins cor-1">OAB/PE 55.015</span>
             <p class="font-poppins">Especialista em direito previdenciário.</p>
-            <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Previdenciário<br>Direito Civil<br>Direito Administrativo</span></p>
+            <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Previdenciário<br>Direito
+                Civil<br>Direito Administrativo</span></p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
               <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
@@ -230,7 +233,8 @@
           <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
             <h1 class="font-poppins cor-1">Dr. Jackson Albuquerque</h1>
             <span class="span-oab2 font-poppins cor-1">OAB/PE 65.937</span>
-            <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Civil <br>Legislação de Trânsito <br>Direito Imobiliário</span></p>  
+            <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Civil <br>Legislação de
+                Trânsito <br>Direito Imobiliário</span></p>
             <div class="contato-pessoal-arcoverde">
               <p class="font-montserrat">Arcoverde</p>
               <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
@@ -248,7 +252,41 @@
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dra. Sheyla Almeida</h1>
             <span class="span-oab2 font-poppins cor-1">OAB/PE 65.109</span>
-            <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Civil <br> Direito Trabalhista</span></p>
+            <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Civil <br> Direito
+                Trabalhista</span></p>
+            <div class="contato-pessoal-buique">
+              <p class="font-montserrat">Buíque</p>
+              <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img
+                  src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
+                  alt="email"></a>
+            </div>
+          </div>
+        </li>
+
+        <li>
+          <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
+            <h1 class="font-poppins cor-1">Ellen Nunes</h1>
+            <p class="font-poppins">Estagiária</p>
+            <div class="contato-pessoal-buique">
+              <p class="font-montserrat">Buíque</p>
+              <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img
+                  src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
+                  alt="email"></a>
+            </div>
+          </div>
+          <div class="grid-colum-2"><img src="images/estagiaria.jpeg" data-anime="scroll-up" alt="estagiária"></div>
+        </li>
+
+        
+        <li>
+          <div><img src="images/recepcionista.jpeg" data-anime="scroll-up" alt="recepcionista"></div>
+          <div class="equipe-advg-conteudo" data-anime="scroll-right">
+            <h1 class="font-poppins cor-1">Vitória Couto</h1>
+            <p class="font-poppins">Secretária Administrativa</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
               <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
@@ -373,7 +411,7 @@
         <p class="font-poppins cor-0"> 8h às 12h <br> 13:30 às 17h</p>
 
         <p class="font-poppins cor-0 cidade">Arcoverde - Segunda a Sexta</p>
-          <p class="font-poppins cor-0">9h às 12h<br> 14h às 18h</p>
+        <p class="font-poppins cor-0">9h às 12h<br> 14h às 18h</p>
       </div>
     </div>
     <div class="footer-creditos container">
