--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <li>
           <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
             <h1 class="font-poppins cor-1">Ellen Nunes</h1>
-            <p class="font-poppins">Estagiária</p>
+            <p class="font-poppins">Estagiária.</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
               <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
@@ -286,7 +286,7 @@
           <div><img src="images/recepcionista.jpeg" data-anime="scroll-up" alt="recepcionista"></div>
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Vitória Couto</h1>
-            <p class="font-poppins">Secretária Administrativa</p>
+            <p class="font-poppins">Secretária Administrativa.</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
               <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
@@ -370,7 +370,6 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.6990846883765!2d-37.0598041413136!3d-8.421652099968767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a81bd4b9cf407f%3A0x83cfa429ae68458d!2sCARLOS%20AR%C3%81UJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342185079!5m2!1spt-BR!2sbr"
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
-          <div>
             <h3 class="font-roboto">Escritório Arcoverde</h3>
             <ul>
               <li>
@@ -386,7 +385,6 @@
                 <p class="font-roboto icon-tel"><a href="tel:+5587999066958">(87)99906-6958</a></p>
               </li>
             </ul>
-          </div>
         </div>
       </div>
     </div>
