--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dr. Carlos Araújo</h1>
             <span class="span-oab2 font-poppins cor-1">OAB/PE 32.099</span>
-            <p class="font-poppins">Especialista em direito Penal, Processo Penal e Criminologia.</p>
+            <p class="font-poppins">Especialista em Direito Penal, Processo Penal e Criminologia.</p>
             <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br> Direito Criminal<br>Direito
                 Eleitoral<br>Direito Administrativo Sancionador</span></p>
             <div class="contato-pessoal-buique">
@@ -189,7 +189,7 @@
           <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
             <h1 class="font-poppins cor-1">Dr. Matheus Barros</h1>
             <span class="span-oab2 font-poppins cor-1">OAB/PE 55.015</span>
-            <p class="font-poppins">Especialista em direito previdenciário.</p>
+            <p class="font-poppins">Especialista em Direito Previdenciário.</p>
             <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Previdenciário<br>Direito
                 Civil<br>Direito Administrativo</span></p>
             <div class="contato-pessoal-buique">
@@ -217,7 +217,7 @@
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dra. Josivânia Siqueira</h1>
             <span class="span-oab2 font-poppins cor-1">OAB/PE 57.876</span>
-            <p class="font-poppins">Especialista em direito trabalhista.</p>
+            <p class="font-poppins">Especialista em Direito Trabalhista.</p>
             <div class="contato-pessoal-arcoverde">
               <p class="font-montserrat">Arcoverde</p>
               <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
