--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dr. Carlos Araújo</h1>
             <span class="span-oab2 font-poppins cor-1">OAB/PE 32.099</span>
-            <p class="font-poppins">Especialista em Direito Penal, Processo Penal e Criminologia.</p>
+            <p class="font-poppins">Especialista em Direito Penal, <br> Processo Penal e Criminologia.</p>
             <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br> Direito Criminal<br>Direito
                 Eleitoral<br>Direito Administrativo Sancionador</span></p>
             <div class="contato-pessoal-buique">
